@@ -1,3 +1,8 @@
+Wed Oct  6 23:20:11 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* server/local_inotify.h: applied patch for inotify-0.13 from
+	  John McCutchan.
+
 Tue Oct  5 18:50:57 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* gamin.spec.in: added BuildRequires: glib2-devel , bug #134689
